Changelog
=========


1.4.7 (unreleased)
------------------

- Nothing changed yet.


1.4.6 (2013-11-18)
------------------

- Nothing changed yet.


1.4.5 (2013-11-15)
------------------

- Fix PDF rendering of meeting item's related items.
  Remove manually footnotes with \url and use standard <a> tag converter.
  [jone]

- Rewrite meeting latex view tests (No mocking anymore).
  [mathias.leimgruber]

- Plone 4.3 compatibility (imports and jQuery).
  [mathias.leimgruber]

- BugFix: meetingitem listing use getURL instead of absolute_url.
  ContentRelatedItems returns brains.
  [mathias.leimgruber]

- BugFix: also apply the prev. fix for the meetingitem.
  [mathias.leimgruber]

- BugFix: meeting latex shows id instead of fullname.
  [mathias.leimgruber]


1.4.4 (2013-09-20)
------------------

- Implement Products.DataGridField 1.9 compatibility.
  (use label instead of title -> https://github.com/collective/Products.DataGridField/blob/1.9.0/Products/DataGridField/SelectColumn.py#L26)
  [mathias.leimgruber]


1.4.3 (2013-08-23)
------------------

- Fix generate meeting from poodle js.
- Replace jq with $.
  [mathias.leimgruber]

- Add div-element arount ics export for better css selectors
  [elioschmutz]

- ContentRelatedItems was deprecated in Plone 4.0.10 and removed aprox. in 4.2
  Use the method defined the related content viewlet.
  [mathias.leimgruber]

- Add permissionmapping for ftw.lawgiver
  [elioschmutz]

- Fix JS toggling of meeting content.
  [treinhard]

- Avoid exception with PDF generation if 'head_of_meeting'
  (or another field that uses a vocabulary) is empty.
  [treinhard]


1.4.2 (2013-03-11)
------------------

- Replace jq by $.
  [mathias.leimgruber]

- Use local text formatting command \textbf instead of {\bf }.
  [jone]


1.4.1 (2013-01-21)
------------------

- Use safe-html-transform for textfields (Secure audit).
  [mathias.leimgruber]

- PDF: handle empty field value conversion.
  [jone]
