@@ -5,7 +5,8 @@ Changelog
 1.4.7 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix getting related tasks on for task latex listing.
+  [mathias.leimgruber]
 
 
 1.4.6 (2013-11-18)
